--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
         seu navegador não é suportado
 
     </video>
+    <br><br>
+    <section>
+        <table border>
+            <h2>Taxas e serviços</h2>
+            <p>Veja nossas taxas para serviços:</p>
+            <tr>
+                <th>Serviços</th>
+                <th>Valor</th>
+            </tr>
+            <tr>
+                <td>Reserva de Hotel</td>
+                <td>R$ 150,00</td>
+            </tr>
+            <tr>
+                <td>Compra de passagens</td>
+                <td>R$ 100,00</td>
+            </tr>
+            <tr>
+                <td>Aluguel de Carro</td>
+                <td>R$ 50,00 </td>
+            </tr>
+        </table>    
+    </section>
+
 
     <footer>
         <p>Desenvolvido por Reginaldo Silva</p>
