--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <head>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg border border-primary bg-warning">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Viagem dos Sonhos</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,36 +31,31 @@
                 </ul>
               </div>
             </div>
-          </nav>
+        </nav>
         <h1>Venha realizar a viagem dos seus sonhos</h1>
     </head>
-    <section>
+    <section class="mx-3">
         <h2>Conheça nossos pacotes</h2>
         <p>
             Aliquam venenatis orci vitae accumsan ultricies. Donec eleifend ut sem dapibus sollicitudin. Nullam quis gravida nulla, in auctor magna. Duis erat lacus, blandit sit amet urna eget, laoreet laoreet velit. Donec et commodo dolor. Curabitur pretium est et ante mattis mollis. Aliquam venenatis justo eros, id pharetra nisl dictum ac. Cras fermentum, orci sit amet tincidunt venenatis, dui mi commodo arcu, ullamcorper sodales lacus ante a nunc. Cras tempus neque eu quam consequat aliquet. Duis vitae massa erat. Aenean sit amet elit placerat, fermentum dolor quis, facilisis dolor. Fusce in euismod neque. Nunc accumsan egestas mi, non interdum libero tincidunt quis. Praesent eleifend justo vitae accumsan tempus. <a href="https://www.lipsum.com/feed/html">link</a>
         </p>
         <br><br>
         <hr>
-
-        <figure>
-            <img src="img/download (3).jpg" alt="texto alternativo">
-            <figcaption>Gramado</figcaption>
-        </figure>
-        <figure>
-            <img src="img/download (1).jpg" alt="texto alternativo">
-            <figcaption>Fortaleza</figcaption>
-        </figure>
-        <figure>
-            <img src="img/download (2).jpg" alt="texto alternativo">
-            <figcaption>Natal</figcaption>
-        </figure>
+        <div class="row border border-primary">
+            <figure class="col text-center">
+                <img src="img/download (3).jpg" alt="texto alternativo">
+                <figcaption>Gramado</figcaption>
+            </figure>
+            <figure class="col text-center">
+                <img src="img/download (1).jpg" alt="texto alternativo">
+                <figcaption>Fortaleza</figcaption>
+            </figure>
+            <figure class="col text-center">
+                <img src="img/download (2).jpg" alt="texto alternativo">
+                <figcaption>Natal</figcaption>
+            </figure>
+        </div>
     </section>
-
-    <video controls width="500px">
-        <source src="videos/O que você não pode deixar de fazer em Roma _ Próximo Embarque.mp4" type="video/mp4">
-        seu navegador não é suportado
-
-    </video>
     <br><br>
     <section>
         <table border>
