--- a/teste.html
+++ b/teste.html
@@ -8,10 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
 <body>
-  <div class="container text-left">
+  <div class="container text-center border border-primary mx-auto">
     <div class="row">
       <div class="col">
         Column
+        <p style="color: red;">oioioioioi</p>
       </div>
       <div class="col">
         Column
